wizard launches now, but that is all. Lots of work to do to hit the final goal might need to write most of the rendering code

--- a/index.jade
+++ b/index.jade
@@ -25,7 +25,8 @@ html
       #output
       button#save save
     #overlay.hidden
-      p Would you like to use the wizard to help you get started?
-      button#yes yes
-      button#no no
+      #firstprompt
+        p Would you like to use the wizard to help you get started?
+        button#yes yes
+        button#no no
     script(src="script.js")
