--- a/index.jade
+++ b/index.jade
@@ -6,9 +6,8 @@ html
 
     #input.divider.hidden
       
-    #character.divider.hidden
-      #output
-      button#save save
     #output
+      #character
+      #weapon
       
     script(src="script.js")
