--- a/style.scss
+++ b/style.scss
@@ -3,13 +3,16 @@
 }
 body {
   background: #3498db;
+  color: #2a2a2a;
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-weight: 300;
 }
 
 .hidden {
   display: none;
 }
 
-.divider {
+.half {
   width: 50%;
   float: left;
   padding: 25px;
