can now sort of create new magic

--- a/index.jade
+++ b/index.jade
@@ -16,8 +16,8 @@ html
         #magic
         
     #input.half
-      button new weapon
-      button new magic
+      button#show-new-weapon new weapon
+      button#show-new-magic new magic
       #weapon-creator.hidden
         .set
           label Title
