--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   background: #3498db;
-  color: #2a2a2a;
+  color: white;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
