--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,8 @@
 }
 body {
   background: #3498db;
-  color: #2a2a2a;
+  // color: #2a2a2a;
+  color: white;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
